--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap");
 
 body {
-  background-image: url("https://cdn.discordapp.com/attachments/793129764558864386/1359188348622868561/IMG_0679.png?ex=67f6924a&is=67f540ca&hm=d4a9bd7c017cf23284275e492b640363fc9a1b57354f6c139deb7a2c6827acbd&");
+  background-image: url("IMG_0679.png");
 
   /* Full height */
   height: 100%;
